.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Third_Party_Summary__c.object
<CustomObject>
    <description>Captures details associated with the tax code download</description>
    <fields>
        <fullName>xcdhcm__Employer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employer</label>
        <referenceTo>xcdhcm__Employer__c</referenceTo>
        <relationshipLabel>Third Party Summary</relationshipLabel>
        <relationshipName>Third_Party_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Entity_type__c</fullName>
        <label>Entity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EmpRef</fullName>
                </value>
                <value>
                    <fullName>UTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Got__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Got</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__High_water_mark__c</fullName>
        <defaultValue>0</defaultValue>
        <label>High water mark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__More_data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Nitems__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nitems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>PAYE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual reminder</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>P6</fullName>
                </value>
                <value>
                    <fullName>P9</fullName>
                </value>
                <value>
                    <fullName>RTI notifications</fullName>
                </value>
                <value>
                    <fullName>SL1</fullName>
                </value>
                <value>
                    <fullName>SL2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Third Party Summary</label>
    <nameField>
        <label>Third Party Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Summary</pluralLabel>
    <recordTypes>
        <fullName>xcdhcm__Incoming_dps</fullName>
        <active>true</active>
        <label>Incoming dps</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>